# org-cli

./: .gitignore  Cargo.toml  Justfile  PLAN.md  README.md  flake.nix  garnix.yaml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/worktrees/agent-a3dc047cdb1c0d7ef/.omc/state/: last-tool-error.json
.github/workflows/: ci.yml
nix/: init.el  live-test-env.nix  update-pins.sh
nix/elisp/: agile-gtd.nix  org-mcp.nix
scripts/: run-live-tests.sh
src/: argv.rs  cli.rs  contract.rs  discovery.rs  lib.rs  main.rs  output.rs  uri.rs
src/mcp/: client.rs  error.rs  mod.rs  transport.rs
tests/: cli_clock_in.rs  cli_clock_modify.rs  cli_clock_out.rs  cli_clock_status.rs  cli_config.rs  cli_content_variants.rs  cli_edit_basic.rs  cli_edit_body.rs  cli_edit_dates.rs  cli_edit_properties.rs  cli_outline.rs  cli_query_bare.rs  cli_query_gtd.rs  cli_query_no_gtd.rs  cli_query_run.rs  cli_read.rs  cli_read_headline.rs  cli_schema.rs  cli_server_argv.rs  cli_timeout.rs  cli_todo_add.rs  cli_todo_state.rs  cli_tools_call.rs  cli_tools_list.rs  compact_global.rs  contract_registry.rs  discovery.rs  error_data_preserved.rs  error_paths.rs  exit_code_matrix.rs  handshake.rs  live_org_mcp.rs  readme_examples.rs
tests/fixtures/mock_org_mcp/: main.rs
tests/live-fixtures/: sample.org
