[package]
name = "org-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "org_cli"
path = "src/lib.rs"

[[bin]]
name = "org"
path = "src/main.rs"

[[bin]]
name = "mock_org_mcp"
path = "tests/fixtures/mock_org_mcp/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive", "env"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
anyhow     = "1"
